tous les services OK

--- a/front-end/src/app/home/home.component.html
+++ b/front-end/src/app/home/home.component.html
@@ -78,7 +78,20 @@
   <app-produit></app-produit>
 </div>
 
+<br>
+<div>
+  <app-fournisseurs></app-fournisseurs>
+</div>
 
+<br>
+<div>
+  <app-categories></app-categories>
+</div>
+
+<br>
+<div>
+  <app-utilisateurs></app-utilisateurs>
+</div>
 
 
 
