--- a/front-end/src/app/categories/categories.component.html
+++ b/front-end/src/app/categories/categories.component.html
@@ -1,1 +1,30 @@
-<p>categories works!</p>
+<button type="submit" class="btn btn-primary" (click)="goToAddCategories()">
+  <span class="glyphicon glyphicon-floppy-disk"></span> Ajout Catégorie
+</button>
+
+<div>
+  <table id="table" mdbTable>
+
+
+    <thead>
+    <tr>
+      <th>Id</th>
+      <th>Nom</th>
+      <th>Détails</th>
+    </tr>
+    </thead>
+    <tbody>
+    <tr mdbTableCol *ngFor="let c of categories">
+      <td>{{ c.id }}</td>
+      <td>{{ c.nom }}</td>
+      <td>{{ c.details }}</td>
+
+      <td>
+        <button [id]="c.id" type="submit" mdbBtn color="danger" mdbWavesEffect (click)="deleteCategorie(c.id)">Supprimer</button>
+        <button [id]="c.id" type="submit" mdbBtn color="primary" mdbWavesEffect [routerLink]="['/modifier-categorie', c.id]">Modifier</button>
+
+      </td>
+    </tr>
+    </tbody>
+  </table>
+</div>
