--- a/front-end/src/app/fournisseurs/fournisseurs.component.html
+++ b/front-end/src/app/fournisseurs/fournisseurs.component.html
@@ -1,1 +1,34 @@
-<p>fournisseurs works!</p>
+<div>
+  <button type="submit" class="btn btn-primary" (click)="goToAddFournisseurs()">
+    <span class="glyphicon glyphicon-floppy-disk"></span> Ajout Fournisseur
+  </button>
+</div>
+
+<div>
+  <table id="table" mdbTable>
+
+
+    <thead>
+    <tr>
+      <th>Id</th>
+      <th>Nom</th>
+      <th>Adresse</th>
+      <th>Catégorie</th>
+    </tr>
+    </thead>
+    <tbody>
+    <tr mdbTableCol *ngFor="let f of fournisseurs">
+      <td>{{ f.id }}</td>
+      <td>{{ f.nom }}</td>
+      <td>{{ f.adresse }}</td>
+      <td>{{ f.categorie}}</td>
+
+      <td>
+        <button [id]="f.id" type="submit" mdbBtn color="danger" mdbWavesEffect (click)="deleteFourn(f.id)">Supprimer</button>
+        <button [id]="f.id" type="submit" mdbBtn color="primary" mdbWavesEffect [routerLink]="['/modifier-fournisseur', f.id]">Modifier</button>
+
+      </td>
+    </tr>
+    </tbody>
+  </table>
+</div>
