--- a/front-end/src/app/produit/produit.component.html
+++ b/front-end/src/app/produit/produit.component.html
@@ -14,20 +14,38 @@
 </div>
 
 <div>
-<table id="table" mdbTable>
 
+
+  <div class="container">
+    <div class="row">
+      <div class="col-md-12 mx-auto">
+        <div class="md-form">
+          <input
+            type="text"
+            [(ngModel)]="searchText"
+            class="form-control"
+            id="search"
+            mdbInput
+          />
+          <label for="search">Search</label>
+        </div>
+      </div>
+    </div>
+
+<table id="table" mdbTable>
 
   <thead>
   <tr>
-    <th>Id</th>
-    <th>Nom</th>
-    <th>Catégorie</th>
-    <th>Fournisseur</th>
-    <th>Origine</th>
+    <th
+      *ngFor="let head of headElements; let i = index"
+      scope="col"
+    >
+      {{head}}
+    </th>
   </tr>
   </thead>
   <tbody>
-  <tr mdbTableCol *ngFor="let produit of produits">
+  <tr mdbTableCol *ngFor="let produit of elements">
     <td>{{ produit.id }}</td>
     <td>{{ produit.nom }}</td>
     <td>{{ produit.categorie }}</td>
@@ -43,3 +61,4 @@
   </tbody>
 </table>
 </div>
+
