--- a/front-end/src/app/home/home.component.html
+++ b/front-end/src/app/home/home.component.html
@@ -93,6 +93,11 @@
   <app-utilisateurs></app-utilisateurs>
 </div>
 
+<br>
+<div>
+  <app-afficher-produits></app-afficher-produits>
+</div>
+
 
 
 <!-- Footer -->
