--- a/front-end/src/app/admin/admin.component.html
+++ b/front-end/src/app/admin/admin.component.html
@@ -1,1 +1,19 @@
-<p>admin works!</p>
+<br>
+<mdb-navbar SideClass="navbar navbar-expand-lg navbar-dark indigo">
+  <links>
+    <ul class="navbar-nav mr-auto">
+      <li class="nav-item">
+        <a class="nav-link waves-light" routerLink="/produits" mdbWavesEffect>Produits</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link waves-light" routerLink="/categories" mdbWavesEffect>Catégories</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link waves-light" routerLink="/fournisseurs" mdbWavesEffect>Fournisseurs</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link waves-light" routerLink="/utilisateurs" mdbWavesEffect>Utilisateurs</a>
+      </li>
+    </ul>
+  </links>
+</mdb-navbar>
