--- a/front-end/src/app/admin/admin.component.html
+++ b/front-end/src/app/admin/admin.component.html
@@ -13,7 +13,7 @@
 
     <!-- Links -->
     <ul class="navbar-nav mr-auto">
-      <li class="nav-item active">
+      <li class="nav-item">
         <a class="nav-link waves-light" routerLink="/produits" mdbWavesEffect>PRODUITS<span class="sr-only">(current)</span></a>
       </li>
       <li class="nav-item">
