--- a/front-end/src/app/contact/contact.component.html
+++ b/front-end/src/app/contact/contact.component.html
@@ -47,7 +47,7 @@
 
           <div class="md-form">
             <mdb-icon fas icon="pencil-alt" class="prefix grey-text"></mdb-icon>
-            <textarea mdbInput type="text" id="form4" class="md-textarea"></textarea>
+            <textarea mdbInput type="text" id="form4" class="md-textarea" formControlName="message"></textarea>
             <label for="form4">Votre message</label>
           </div>
 
