--- a/front-end/src/app/connecter/connecter.component.html
+++ b/front-end/src/app/connecter/connecter.component.html
@@ -1,9 +1,9 @@
 
-
+  <br>
     <!-- Material form login -->
     <mdb-card>
 
-      <mdb-card-header class="green white-text text-center py-4">
+      <mdb-card-header class=" green lighten-2 white-text text-center py-4">
         <h5>
           <strong>Connexion</strong>
         </h5>
@@ -38,18 +38,12 @@
               <a href="#">Mot de passe oublié?</a>
             </div>
           </div>
-
           <!-- Sign in button -->
-          <button mdbBtn color="green" outline="true" rounded="true" block="true" class="my-4 waves-effect z-depth-0" mdbWavesEffect
-                  type="submit">Se connecter</button>
-
+            <button type="submit" mdbBtn class="waves-light green lighten-2" mdbWavesEffect>Se connecter</button>
           <!-- Register -->
           <p>Pas encore membre?
             <a routerLink="/connexion-Privé">S'enregistrer</a>
           </p>
-
-
-
         </form>
         <!-- Form -->
 
