--- a/front-end/src/app/admin/admin.component.html
+++ b/front-end/src/app/admin/admin.component.html
@@ -6,27 +6,27 @@
 <mdb-navbar SideClass="navbar navbar-1 navbar-light green lighten-2 " [containerInside]="false">
 
   <!-- Navbar brand -->
-  <mdb-navbar-brand><a class="navbar-brand" href="#">Administration de la page</a></mdb-navbar-brand>
+  <mdb-navbar-brand><a class="navbar-brand white-text py-4">Administration de la page</a></mdb-navbar-brand>
 
   <!-- Collapsible content -->
   <links>
 
     <!-- Links -->
-    <ul class="navbar-nav mr-auto">
-      <li class="nav-item">
-        <a class="nav-link waves-light" routerLink="/produits" mdbWavesEffect>PRODUITS<span class="sr-only">(current)</span></a>
+    <ul class="navbar-nav mr-auto ">
+      <li class="nav-item ">
+        <a class="nav-link waves-light white-text" routerLink="/produits" mdbWavesEffect>PRODUITS<span class="sr-only">(current)</span></a>
       </li>
       <li class="nav-item">
-        <a class="nav-link waves-light" routerLink="/categories" mdbWavesEffect>CATEGORIES</a>
+        <a class="nav-link waves-light white-text" routerLink="/categories" mdbWavesEffect>CATEGORIES</a>
       </li>
       <li class="nav-item">
-      <a class="nav-link waves-light" routerLink="/fournisseurs" mdbWavesEffect>FOURNISSEURS</a>
+      <a class="nav-link waves-light white-text" routerLink="/fournisseurs" mdbWavesEffect>FOURNISSEURS</a>
     </li>
       <li class="nav-item">
-        <a class="nav-link waves-light" routerLink="/utilisateurs" mdbWavesEffect>UTILISATEURS</a>
+        <a class="nav-link waves-light white-text" routerLink="/utilisateurs" mdbWavesEffect>UTILISATEURS</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link waves-light" routerLink="/statistiques" mdbWavesEffect>STATISTIQUES</a>
+        <a class="nav-link waves-light white-text" routerLink="/statistiques" mdbWavesEffect>STATISTIQUES</a>
       </li>
     </ul>
     <!-- Links -->
