--- a/front-end/src/app/connecter/connecter.component.html
+++ b/front-end/src/app/connecter/connecter.component.html
@@ -42,7 +42,7 @@
             <button type="submit" [disabled]="!connexionForm.valid" mdbBtn class="waves-light green lighten-2" mdbWavesEffect>Se connecter</button>
           <!-- Register -->
           <p>Pas encore membre?
-            <a routerLink="/connexion-Privé">S'enregistrer</a>
+            <a routerLink="/inscription">S'enregistrer</a>
           </p>
         </form>
         <!-- Form -->
