--- a/front-end/src/app/modifier-utilisateur/modifier-utilisateur.component.html
+++ b/front-end/src/app/modifier-utilisateur/modifier-utilisateur.component.html
@@ -1,21 +1,33 @@
 <div class="form-horizontal pad-10">
   <br>
   <form #modifierUtilisateurForm="ngForm">
-    <label class=" control-label">Pseudo</label>
+
+    <label class=" control-label">Nom</label>
     <div class="col-md-12 no-padding">
-      <input name="pseudo" id="pseudo" #pseudo="ngModel" [(ngModel)]="leUtilisateur.pseudo" class="form-control" placeholder="" type="text" required />
-      <div *ngIf="pseudo.errors && (pseudo.dirty || pseudo.touched)" class="alert alert-danger">
-        <div [hidden]="!pseudo.errors.required">
-          pseudo est requis!
+      <input name="nom" id="nom" #nom="ngModel" [(ngModel)]="leUtilisateur.nom" class="form-control" placeholder="" type="text" required />
+      <div *ngIf="nom.errors && (nom.dirty || nom.touched)" class="alert alert-danger">
+        <div [hidden]="!nom.errors.required">
+          nom est requis!
         </div>
       </div>
     </div>
-    <label class=" control-label">Mot de Passe</label>
+
+    <label class=" control-label">Prenom</label>
     <div class="col-md-12 no-padding">
-      <input name="mdp" id="mdp" #mdp="ngModel" [(ngModel)]="leUtilisateur.mdp" class="form-control" placeholder="" type="text" required />
-      <div *ngIf="mdp.errors && (mdp.dirty || mdp.touched)" class="alert alert-danger">
-        <div [hidden]="!mdp.errors.required">
-          Mot de Passe est requis!
+      <input name="prenom" id="prenom" #prenom="ngModel" [(ngModel)]="leUtilisateur.prenom" class="form-control" placeholder="" type="text" required />
+      <div *ngIf="prenom.errors && (prenom.dirty || prenom.touched)" class="alert alert-danger">
+        <div [hidden]="!prenom.errors.required">
+          Prenom est requis!
+        </div>
+      </div>
+    </div>
+
+    <label class=" control-label">Genre</label>
+    <div class="col-md-12 no-padding">
+      <input name="genre" id="genre" #genre="ngModel" [(ngModel)]="leUtilisateur.genre" class="form-control" placeholder="" type="text" required />
+      <div *ngIf="genre.errors && (genre.dirty || genre.touched)" class="alert alert-danger">
+        <div [hidden]="!genre.errors.required">
+          genre est requis!
         </div>
       </div>
     </div>
@@ -29,6 +41,18 @@
         </div>
       </div>
     </div>
+
+    <label class=" control-label">Mot de Passe</label>
+    <div class="col-md-12 no-padding">
+      <input name="mdp" id="mdp" #mdp="ngModel" [(ngModel)]="leUtilisateur.mdp" class="form-control" placeholder="" type="text" required />
+      <div *ngIf="mdp.errors && (mdp.dirty || mdp.touched)" class="alert alert-danger">
+        <div [hidden]="!mdp.errors.required">
+          Mot de Passe est requis!
+        </div>
+      </div>
+    </div>
+
+
 
     <label class=" control-label">Adresse</label>
     <div class="col-md-12 no-padding">
