--- a/front-end/src/app/utilisateurs/utilisateurs.component.html
+++ b/front-end/src/app/utilisateurs/utilisateurs.component.html
@@ -9,9 +9,11 @@
     <thead>
     <tr>
       <th>Id</th>
-      <th>Pseudo</th>
-      <th>Mot De Passe</th>
+      <th>Nom</th>
+      <th>Prénom</th>
+      <th>Genre</th>
       <th>Email</th>
+      <th>Mot De Passe</th>
       <th>Adresse</th>
       <th>Téléphone</th>
     </tr>
@@ -19,9 +21,11 @@
     <tbody>
     <tr mdbTableCol *ngFor="let u of utilisateurs">
       <td>{{ u.id }}</td>
-      <td>{{ u.pseudo }}</td>
-      <td>{{ u.mdp }}</td>
+      <td>{{ u.nom }}</td>
+      <td>{{ u.prenom }}</td>
+      <td>{{ u.genre }}</td>
       <td>{{ u.email }}</td>
+      <td>{{ u.mdp }}</td>
       <td>{{ u.adresse }}</td>
       <td>{{ u.telephone }}</td>
 
