--- a/front-end/src/app/home/home.component.html
+++ b/front-end/src/app/home/home.component.html
@@ -72,7 +72,7 @@
 
 <br>
 <div>
-  <app-afficher-produits></app-afficher-produits>
+ <!-- <app-afficher-produits></app-afficher-produits> -->
 </div>
 
 
