--- a/front-end/src/app/produit/produit.component.html
+++ b/front-end/src/app/produit/produit.component.html
@@ -9,13 +9,19 @@
   </div>
 </div>
 
+<br>
+
 <div>
+  <input #box (keyup.enter)="onEnter(box.value)">
+</div>
+
+
 
 <table id="table" mdbTable>
 
   <thead>
   <tr>
-    <th>Id</th>
+    <th>id</th>
     <th>Nom</th>
     <th>Catégorie</th>
     <th>Fournisseur</th>
@@ -38,4 +44,4 @@
   </tr>
   </tbody>
 </table>
-</div>
+
