--- a/front-end/src/app/connecter/connecter.component.html
+++ b/front-end/src/app/connecter/connecter.component.html
@@ -24,26 +24,14 @@
 
           <!-- Password -->
           <div class="md-form">
-            <input type="password" id="materialLoginFormPassword" class="form-control" mdbInput formControlName="password">
+            <input type="password" id="materialLoginFormPassword" class="form-control" mdbInput formControlName="mdp">
             <label for="materialLoginFormPassword">Mot de passe</label>
           </div>
 
-          <div class="d-flex justify-content-around">
-            <div>
-              <!-- Remember me -->
-              <mdb-checkbox>Se souvenir de moi</mdb-checkbox>
-            </div>
-            <div>
-              <!-- Forgot password -->
-              <a href="#">Mot de passe oublié?</a>
-            </div>
-          </div>
+
           <!-- Sign in button -->
             <button type="submit" [disabled]="!connexionForm.valid" mdbBtn class="waves-light green lighten-2" mdbWavesEffect>Se connecter</button>
-          <!-- Register -->
-          <p>Pas encore membre?
-            <a routerLink="/inscription">S'enregistrer</a>
-          </p>
+
         </form>
         <!-- Form -->
 
