Messages d'erreur + bouton recherche produits

--- a/front-end/src/app/connecter/connecter.component.html
+++ b/front-end/src/app/connecter/connecter.component.html
@@ -28,6 +28,7 @@
             <label for="materialLoginFormPassword">Mot de passe</label>
           </div>
 
+          <div>{{rep}}</div>
 
           <!-- Sign in button -->
             <button type="submit" [disabled]="!connexionForm.valid" mdbBtn class="waves-light green lighten-2" mdbWavesEffect>Se connecter</button>
