--- a/front-end/src/app/nav-bar/nav-bar.component.html
+++ b/front-end/src/app/nav-bar/nav-bar.component.html
@@ -34,6 +34,7 @@
               <a class="dropdown-item" routerLink="/connecter-admin">Admin</a>
               <div class="divider dropdown-divider"></div>
               <a class="dropdown-item" routerLink="/connecter">Se connecter</a>
+              <a class="dropdown-item" routerLink="/">Se déconnecter</a>
             </div>
           </div>
         </a>
