--- a/front-end/src/app/categories/categories.component.html
+++ b/front-end/src/app/categories/categories.component.html
@@ -1,30 +1,86 @@
-<button type="submit" class="btn btn-primary" (click)="goToAddCategories()">
-  <span class="glyphicon glyphicon-floppy-disk"></span> Ajout Catégorie
-</button>
+<br>
+<!--Navbar-->
+<mdb-navbar SideClass="navbar navbar-1 navbar-light green lighten-2 " [containerInside]="false">
 
-<div>
-  <table id="table" mdbTable>
+  <!-- Navbar brand -->
+  <mdb-navbar-brand><a class="navbar-brand white-text py-4">Catégories</a></mdb-navbar-brand>
+
+  <!-- Collapsible content -->
+  <links>
+
+    <!-- Links -->
+    <ul class="navbar-nav mr-auto ">
+      <li class="nav-item ">
+        <a class="nav-link waves-light white-text" routerLink="/produits" mdbWavesEffect>PRODUITS<span class="sr-only">(current)</span></a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link waves-light white-text" routerLink="/fournisseurs" mdbWavesEffect>FOURNISSEURS</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link waves-light white-text" routerLink="/utilisateurs" mdbWavesEffect>UTILISATEURS</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link waves-light white-text" routerLink="/statistiques" mdbWavesEffect>STATISTIQUES</a>
+      </li>
+    </ul>
+    <!-- Links -->
+  </links>
+  <!-- Collapsible content -->
+
+</mdb-navbar>
+<!--/.Navbar-->
 
 
-    <thead>
-    <tr>
-      <th>Id</th>
-      <th>Nom</th>
-      <th>Détails</th>
-    </tr>
-    </thead>
-    <tbody>
-    <tr mdbTableCol *ngFor="let c of categories">
-      <td>{{ c.id }}</td>
-      <td>{{ c.nom }}</td>
-      <td>{{ c.details }}</td>
+<!-- Jumbotron -->
+<div class="jumbotron text-center">
 
-      <td>
-        <button [id]="c.id" type="submit" mdbBtn color="danger" mdbWavesEffect (click)="deleteCategorie(c.id)">Supprimer</button>
-        <button [id]="c.id" type="submit" mdbBtn color="primary" mdbWavesEffect [routerLink]="['/modifier-categorie', c.id]">Modifier</button>
+  <!-- Title -->
+  <h2 class="card-title h2">Administration des Catégories</h2>
+  <!-- Subtitle -->
+  <p class="green-text my-4 font-weight-bold">iDlunch propose plus de catégories</p>
 
-      </td>
-    </tr>
-    </tbody>
-  </table>
+
+
+  <hr class="my-4">
+
+  <form class="form-inline md-form mr-auto mb-4">
+    <button mdbBtn size="md" color="light-green" rounded="true" class="my-0 waves-light" mdbWavesEffect type="submit" (click)="goToAddCategories()">Ajout Catégorie</button>
+  </form>
+
+  <div>
+    <table id="table" mdbTable>
+
+
+      <thead>
+      <tr>
+        <th>Id</th>
+        <th>Nom</th>
+        <th>Détails</th>
+      </tr>
+      </thead>
+      <tbody>
+      <tr mdbTableCol *ngFor="let c of categories">
+        <td>{{ c.id }}</td>
+        <td>{{ c.nom }}</td>
+        <td>{{ c.details }}</td>
+
+        <td>
+          <button [id]="c.id" type="submit" mdbBtn color="danger" mdbWavesEffect (click)="deleteCategorie(c.id)">Supprimer</button>
+          <button [id]="c.id" type="submit" mdbBtn color="primary" mdbWavesEffect [routerLink]="['/modifier-categorie', c.id]">Modifier</button>
+
+        </td>
+      </tr>
+      </tbody>
+    </table>
+  </div>
+
+
+
+
 </div>
+<!-- Jumbotron -->
+
+
+
+
+
