--- a/front-end/src/app/produit/produit.component.html
+++ b/front-end/src/app/produit/produit.component.html
@@ -3,16 +3,13 @@
 <mdb-navbar SideClass="navbar navbar-1 navbar-light green lighten-2 " [containerInside]="false">
 
   <!-- Navbar brand -->
-  <mdb-navbar-brand><a class="navbar-brand white-text py-4">Administration de la page</a></mdb-navbar-brand>
+  <mdb-navbar-brand><a class="navbar-brand white-text py-4">Produits</a></mdb-navbar-brand>
 
   <!-- Collapsible content -->
   <links>
 
     <!-- Links -->
     <ul class="navbar-nav mr-auto ">
-      <li class="nav-item ">
-        <a class="nav-link waves-light white-text" routerLink="/produits" mdbWavesEffect>PRODUITS<span class="sr-only">(current)</span></a>
-      </li>
       <li class="nav-item">
         <a class="nav-link waves-light white-text" routerLink="/categories" mdbWavesEffect>CATEGORIES</a>
       </li>
@@ -52,8 +49,8 @@
     <button mdbBtn size="md" color="light-green" rounded="true" class="my-0 waves-light" mdbWavesEffect type="button" (click)="goToAddProduits()">Ajout de produit</button>
   </form>
 
-  <table id="table" mdbTable>
 
+  <table id="table" mdbTable>
     <thead>
     <tr>
       <th>id</th>
@@ -74,11 +71,11 @@
       <td>
         <button [id]="produit.id" type="submit" mdbBtn color="danger" mdbWavesEffect (click)="deleteProduit(produit.id)">Supprimer</button>
         <button [id]="produit.id" type="submit" mdbBtn color="primary" mdbWavesEffect [routerLink]="['/modifier-produit', produit.id]">Modifier</button>
-
       </td>
     </tr>
     </tbody>
   </table>
+
 
 </div>
 <!-- Jumbotron -->
