--- a/front-end/src/app/ajout-categorie/ajout-categorie.component.html
+++ b/front-end/src/app/ajout-categorie/ajout-categorie.component.html
@@ -1,3 +1,11 @@
+
+<br>
+
+<button type="button" class="close" aria-label="Close" routerLink="/categories">
+  <span aria-hidden="true">×</span>
+</button>
+
+
 <div class="form-horizontal pad-10">
   <br>
   <form #ajoutCategorieForm="ngForm">
@@ -26,7 +34,7 @@
               [popoverMessage]="'êtes-vous sûr?'"
               placement="top"
               (confirm)="createCategorie(categories)"
-              type="submit" class="btn btn-save btn-primary" [disabled]="!ajoutCategorieForm.valid">
+              type="submit" mdbBtn color="primary" mdbWavesEffect [disabled]="!ajoutCategorieForm.valid">
         <span class="glyphicon glyphicon-floppy-disk"></span> Sauvegarder
       </button>
     </div>
