--- a/front-end/src/app/categories/categories.component.html
+++ b/front-end/src/app/categories/categories.component.html
@@ -65,8 +65,8 @@
         <td>{{ c.details }}</td>
 
         <td>
-          <button [id]="c.id" type="submit" mdbBtn color="danger" mdbWavesEffect (click)="deleteCategorie(c.id)">Supprimer</button>
-          <button [id]="c.id" type="submit" mdbBtn color="primary" mdbWavesEffect [routerLink]="['/modifier-categorie', c.id]">Modifier</button>
+          <button [id]="c.id" type="submit" mdbBtn color="danger" outline="true" mdbWavesEffect (click)="deleteCategorie(c.id)">Supprimer</button>
+          <button [id]="c.id" type="submit" mdbBtn color="primary" outline="true" mdbWavesEffect [routerLink]="['/modifier-categorie', c.id]">Modifier</button>
 
         </td>
       </tr>
